feat: Add identity service with dedicated database, security configuration, and updates to Docker Compose and existing database files.